--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.10"
 django = "^4.2.7"
 pillow = "^10.1.0"
 django-ckeditor = "^6.7.0"
+psycopg2-binary = "^2.9.9"
 
 
 [build-system]
