--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ django = "^4.2.7"
 pillow = "^10.1.0"
 django-ckeditor = "^6.7.0"
 psycopg2-binary = "^2.9.9"
+django-registration = "^3.4"
 
 
 [build-system]
