--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,12 @@ psycopg2-binary = "^2.9.9"
 django-registration = "^3.4"
 
 
+[tool.poetry.group.dev.dependencies]
+black = "^23.11.0"
+isort = "^5.12.0"
+flake8 = "^6.1.0"
+pre-commit = "^3.5.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
